Initial commit: Coffee & Kilometres travel website
- Set up Astro 5 with TypeScript and Tailwind CSS 4
- Created content collections for guides and blog posts
- Built interactive map component with GPX support (Leaflet)
- Added photo gallery component with lightbox
- Implemented dark/light mode toggle
- Created responsive navigation and layout
- Added SEO features (sitemap, RSS feed, meta tags)
- Included example Dempster Highway guide and blog post

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "temp-project",
+  "name": "coffeeandkilometres",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,6 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.6"
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/rss": "^4.0.14",
+    "@astrojs/sitemap": "^3.6.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.16.6",
+    "leaflet": "^1.9.4",
+    "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.21"
   }
 }
